<resources>
    <string name="app_name">Home_Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_connexion">Connecxion</string>
    <string name="menu_details">Détails maison</string>
    <string name="menu_result">Résultat recherche</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!--    home-->
    <string name="when">Quand?</string>
    <string name="what">Quoi?</string>
    <string-array name="what_arrays">
        <item>Appartement</item>
        <item>Villa</item>
        <item>Château</item>
    </string-array>
    <string name="where">Où?</string>
    <string-array name="where_arrays">
        <item>France</item>
        <item>Espagne</item>
        <item>Belgique</item>
    </string-array>
    <string name="search_home">Démarer ma rechercher</string>

    <!--    login-->
    <string name="user_login">E-mail</string>
    <string name="pswd_login">Mot de passe</string>
    <string name="btn_login_connexion">Connexion</string>

    <!--    details home-->
    <string name="detail_tile">Titre</string>
    <string name="detail_ville">Ville</string>
    <string name="detail_capacité">Capacité</string>
    <string name="detail_descrition">Description longue</string>
    <string name="detail_otpions">Options</string>
    <string name="detail_switch">Echanger</string>

</resources>
