<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.home_share.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_connexion"
        android:name="com.example.home_share.fragments.login.LoginFragment"
        android:label="@string/menu_connexion"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_house_details"
        android:name="com.example.home_share.fragments.DetailsHome.DetailsHomeFragment"
        android:label="@string/menu_details"
        tools:layout="@layout/fragment_detailsHomexml" />

    <fragment
        android:id="@+id/nav_result"
        android:name="com.example.home_share.fragments.listResult.ListResultFragment"
        android:label="@string/menu_result"
        tools:layout="@layout/fragment_result" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.home_share.fragments.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.home_share.fragments.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>